# krembil-kit

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements-dev.txt
src/krembil_kit/: __init__.py  connectivity_analyzer.py  connectivity_reader.py  edf_loader.py  good_bad_classes.npy  logreg_good_bad.pkl  spectral_analyzer.py  trigger_detector.py
